--- a/project-6/index.html
+++ b/project-6/index.html
@@ -64,9 +64,9 @@
             Product Notes
             <br>
             <input type="text" id="productNotes" name="productNotes" value="Best beans for Espresso" size="60"><br>
-            Product Price
+            Product Price, ETH
             <br>
-            <input type="number" id="productPrice" name="productPrice" value=1>ETH<br>
+            <input type="number" id="productPrice" name="productPrice" value=1><br>
             Distributor ID
             <br>
             <input type="text" id="distributorID" name="distributorID" value="0xf1b1bcd24dad92303dd9fe78be639f7bcf9c238d"
@@ -76,7 +76,7 @@
             <br>
             <input type="text" id="retailerID" name="retailerID" value="0x0fb2bfefd526966c87efa19f6693d50971763fc2"
                 size="50"><br>
-            Distributor ID
+            Consumer ID
             <br>
             <input type="text" id="consumerID" name="consumerID" value="0x5d777e9127b28fb119e81a6304278a0a21bef1c4"
                 size="50"><br>
